# cpp_le_dutch_card_game

./: .gitignore  CMakeLists.txt  README.md  TODO.md  test.txt
cards/: CMakeLists.txt
libraries/: CMakeLists.txt
libraries/cards/: CMakeLists.txt  cards_lib
libraries/cards/includes/: Cards.hpp  Deck.hpp  cards_common.hpp  utils.hpp
libraries/cards/src/: Cards.cpp  Deck.cpp  cards_common.cpp
libraries/utils/: CMakeLists.txt  utils_lib
libraries/utils/includes/: common.hpp  functions.hpp
libraries/utils/src/: common.cpp
work/: CMakeLists.txt  cards_test.cpp  deck_test.cpp  main.cpp
